fixed horizontal scrolling on smaller screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -222,6 +222,9 @@ footer a {
 }
 
 @media (max-width: 960px) {
+  body {
+    overflow-x: hidden;
+  }
   header {
     padding: 60px 0;
   }
